# donato

./: .gitignore  CMakeLists.txt  ProgramL.md  README.md  todo
include/: ast.h  bool_value.h  codegen.h  double_value.h  parser.h  signed_int_value.h  struct_value.h  tokenizer.h  type.h  value.h
src/: ast.cpp  bool_value.cpp  codegen.cpp  double_value.cpp  main.cpp  output_eval.c  parser.cpp  signed_int_value.cpp  type.cpp  value.cpp
src/ast/: ast.cpp  ast.h  expr.cpp  expr.h  statement.cpp  statement.h
src/codegen/: codegen.cpp  compiler_flags.cpp  compiler_flags.h  output_eval.c  setup_default_functions.cpp  setup_default_functions.h
src/error_handling/: errors.c  runtime_errors.h
src/parser/: parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
src/type/: type.cpp  type.h  type_manager.cpp  type_manager.h
src/value/: bool_value.cpp  bool_value.h  double_value.cpp  double_value.h  pointer_value.cpp  pointer_value.h  signed_int_value.cpp  signed_int_value.h  struct_value.cpp  struct_value.h  value.cpp  value.h
